WS_INTEGRATION/DX Sandbox/src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>CompanyAccount__c</fullName>
        <description>Fills in the company or Master Org for each Campaign Member</description>
        <formula>BLANKVALUE(Contact.Account.Name,  Lead.Company )</formula>
        <label>Company/Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner__c</fullName>
        <description>Primary owner of the contact or lead. Pulls the Contact_Owner__c field from the contact and sets all leads to &quot;Tech Transfer&quot;</description>
        <formula>IF( NOT ( ISBLANK (ContactId) ),  Contact.Contact_Owner__c , &quot;Tech Transfer&quot;)</formula>
        <inlineHelpText>Primary owner of the contact or lead.</inlineHelpText>
        <label>Contact Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Owner_Check__c</fullName>
        <description>This will be checked if the owner of the contact or lead is the same as the owner of the campaign. This will help discover leads or contacts that are not assigned correctly, which is helpful for task assignment.</description>
        <formula>OR( Contact.OwnerId = Campaign.OwnerId ,  Lead.OwnerId  = Campaign.OwnerId )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Owner Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Owner__c</fullName>
        <description>Gives the owner name for the member</description>
        <formula>BLANKVALUE(  Contact.Owner.FirstName &amp; &quot; &quot; &amp; Contact.Owner.LastName  , Lead.Owner:User.FirstName &amp; &quot; &quot; &amp; Lead.Owner:User.LastName  )</formula>
        <label>Member Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <formula>0+0</formula>
        <label>SIC Code</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>